force-app/main/default/objects/Property_Feedback__c/Property_Feedback__c.object-meta.xml
<CustomObject>
    <description>Custom object to capture feedback on houses from various sources.</description>
    <label>Property Feedback</label>
    <nameField>
        <displayFormat>PFR-{000000}</displayFormat>
        <label>Property Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>