force-app/main/default/objects/Property_Feedback__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comments provided as part of the feedback.</description>
    <label>Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>