force-app/main/default/objects/Property_Feedback__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>External Id of the review from review system.</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>