force-app/main/default/objects/Property_Feedback__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>Simple rating for houses to guage feedback.</description>
    <label>Rating</label>
    <precision>2</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>